add new endpoint: /patients/pagination
